--- a/modularized/web/templates/user_management.html
+++ b/modularized/web/templates/user_management.html
@@ -2,74 +2,78 @@
 {% block content %}
 
 <div class="alert alert-info mt-4">
-  <i class="fa-solid fa-info-circle"></i> <strong>User Management Access:</strong> Only users with user management permission can access this page.
+  <i class="fa-solid fa-info-circle"></i> <strong>User Management Access:</strong> Only users with user management
+  permission can access this page.
 </div>
 
 <h1>User Management</h1>
 
 {% if user_role_management %}
+<a class="btn btn-primary my-3" href="{{ url_for('create_account') }}">Create Account</a>
 
-  <i class="fa-solid fa-info-circle my-3"></i> Note: Deleting user will also remove all cameras created by that user.
-
-  <button class="btn btn-primary my-3" >
-    <a class="text-light" href="{{ url_for('create_account') }}">Create Account</a>
-  </button>
-
-  {% if users %}
-    <table class="table">
-        <thead>
-            <tr>
-                <th scope="col">ID</th>
-                <th scope="col">Username</th>
-                <th scope="col">Email</th>
-                <th scope="col">Role</th>
-                {% if user_role_management %}
-                  <th scope="col">Actions</th>
-                {% endif %}
-            </tr>
-        </thead>
-        <tbody>
-            {% for user in users %}
-                <tr>
-                    <td>{{ user.id }}</td>
-                    <td>{{ user.username }}</td>
-                    <td>{{ user.email }}</td>
-                    <td>{{ user.role }}</td>
-                    {% if user_role_management %}
-                      <td class="row">
-                          <form class="col" method="POST" action="{{ url_for('user_management') }}" onsubmit="return confirm('Are you sure you want to update this role?');">
-                            <input type="hidden" name="action" value="update">
-                            <input type="hidden" name="user_id" value="{{ user.id }}">
-                            <select name="new_role" class="form-select form-select-sm d-inline w-auto">
-                                {% for role in roles %}
-                                    <option value="{{ role.name }}"
-                                        {% if role.name == user.role %}
-                                          selected
-                                        {% endif %}>
-                                        {{ role.name }}
-                                    </option>
-                                {% endfor %}
-                            </select>
-                            <button type="submit" class="btn btn-sm btn-primary">Update</button>
-                          </form>
-                          <!-- Delete user form -->
-                          <form class="col" method="POST" action="{{ url_for('user_management') }}" onsubmit="return confirm('Are you sure you want to delete this user?');">
-                            <input type="hidden" name="user_id" value="{{ user.id }}">
-                            <input type="hidden" name="action" value="delete">
-                            <button type="submit" class="btn btn-sm btn-danger">Delete</button>
-                          </form>
-                      </td> 
-                    {% endif %}
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-  {% else %}
-      <p>No users found.</p>
-  {% endif %}
+{% if users %}
+<table class="table">
+  <thead>
+    <tr>
+      <h5>
+        <i class="fa-solid fa-table me-2"></i>
+        User List ({{ users|length }} users)
+      </h5>
+    </tr>
+    <tr>
+      <th scope="col">ID</th>
+      <th scope="col">Username</th>
+      <th scope="col">Email</th>
+      <th scope="col">Role</th>
+      {% if user_role_management %}
+      <th scope="col">Actions</th>
+      {% endif %}
+    </tr>
+  </thead>
+  <tbody>
+    {% for user in users %}
+    <tr>
+      <td class="align-middle">{{ user.id }}</td>
+      <td class="align-middle">{{ user.username }}</td>
+      <td class="align-middle">{{ user.email }}</td>
+      <td class="align-middle">{{ user.role }}</td>
+      {% if user_role_management %}
+      <td>
+        <div class="d-flex gap-2 align-items-center">
+          <form method="POST" action="{{ url_for('user_management') }}"
+            onsubmit="return confirm('Are you sure you want to update this role?');"
+            class="d-flex gap-1 align-items-center">
+            <input type="hidden" name="action" value="update">
+            <input type="hidden" name="user_id" value="{{ user.id }}">
+            <select name="new_role" class="form-select form-select-sm">
+              {% for role in roles %}
+              <option value="{{ role.name }}" {% if role.name==user.role %} selected {% endif %}>
+                {{ role.name }}
+              </option>
+              {% endfor %}
+            </select>
+            <button type="submit" class="btn btn-sm btn-success mx-5">Update</button>
+          </form>
+          <!-- Delete user form -->
+          <form method="POST" action="{{ url_for('user_management') }}"
+            onsubmit="return confirm('Are you sure you want to delete this user?\n\nNote: Deleting user will also remove all cameras created by that user.');">
+            <input type="hidden" name="user_id" value="{{ user.id }}">
+            <input type="hidden" name="action" value="delete">
+            <button type="submit" class="btn btn-sm btn-danger">Delete</button>
+          </form>
+        </div>
+      </td>
+      {% endif %}
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+{% else %}
+<p>No users found.</p>
+{% endif %}
 
 {% else %}
-  <p>Not enough permissions. Access denied.</p>
+<p>Not enough permissions. Access denied.</p>
 {% endif %}
 
 {% endblock %}
