If value is missing query the database to get it, if database value is also missing, use default value.

--- a/modularized/web/templates/second_compliance.html
+++ b/modularized/web/templates/second_compliance.html
@@ -22,7 +22,7 @@
             <select name="lab"
                     class="form-select rounded-pill"
                     onchange="this.form.submit()">
-                <option value="">-- Select Lab ---</option>
+                <option value="" {% if not lab_name %}selected{% endif %}>-- Select Lab ---</option>
                 {% for lab in all_labs %}
                     <option value="{{ lab }}" {% if lab == lab_name %}selected{% endif %}>
                         {{ lab }}
