--- a/modularized/web/templates/base.html
+++ b/modularized/web/templates/base.html
@@ -56,6 +56,7 @@
                     </a>
                     {# Delete camera #}
                     <a href="{{ url_for('index',  edit=0, delete=1, camera=camera.camera_name, lab=lab.lab_name) }}"
+                        onclick="return confirm('WARNING: Are you sure you want to delete camera? This action cannot be undone.')"
                         class="ms-2 icon-trash" title="Delete">
                         <i class="fa-solid fa-trash-can"></i>
                     </a>
