--- a/modularized/web/templates/role_management.html
+++ b/modularized/web/templates/role_management.html
@@ -87,7 +87,7 @@
           <input type="hidden" name="action" value="delete">
           <input type="hidden" name="role_name" value="{{ role['name'] }}">
           <button type="submit" class="btn btn-danger btn-sm"
-            onclick="return confirm('WARNING: Are you sure you want to delete this role?');">
+            onclick="return confirm('WARNING: Are you sure you want to delete this role? This action cannot be undone.');">
             Delete
           </button>
         </form>
