--- a/modularized/web/templates/user_management.html
+++ b/modularized/web/templates/user_management.html
@@ -56,7 +56,7 @@
           </form>
           <!-- Delete user form -->
           <form method="POST" action="{{ url_for('user_management') }}"
-            onsubmit="return confirm('Are you sure you want to delete this user?\n\nNote: Deleting user will also remove all cameras created by that user.');">
+            onsubmit="return confirm('WARNING: Are you sure you want to delete this user? This action cannot be undone. \n\nNote: Deleting user will also remove all cameras created by that user.');">
             <input type="hidden" name="user_id" value="{{ user.id }}">
             <input type="hidden" name="action" value="delete">
             <button type="submit" class="btn btn-sm btn-danger">Delete</button>
