removed revert button from role mgmt

--- a/modularized/web/templates/role_management.html
+++ b/modularized/web/templates/role_management.html
@@ -60,13 +60,15 @@
     </table>
   </div>
   <button type="submit" class="btn btn-success mt-3 me-2"
-    onclick="return confirm('Are you sure you want to save permission changes?');">Save Changes</button>
-  <button type="button" class="btn btn-secondary mt-3">
+    onclick="return confirm('Are you sure you want to save permission changes?');">Save Changes
+  </button>
+  {# <button type="button" class="btn btn-secondary mt-3">
     <a class="link-light link-offset-2 link-underline-opacity-0 link-underline-opacity-0-hover"
       href="{{ url_for('role_management') }}">
       Revert
     </a>
   </button>
+  #}
 </form>
 
 <table class="table table-bordered text-center mt-4">
