--- a/modularized/web/static/css/style.css
+++ b/modularized/web/static/css/style.css
@@ -245,9 +245,24 @@ button[type="submit"].btn-danger:hover {
     color: white;
     border: none;
     text-transform: uppercase;
+    text-decoration: none;
 }
 
 .btn-main:hover {
     background-color: #3A5B85;
     color: white;
+}
+
+.btn-main.active {
+    background-color: #274C77;
+    color: white;
+    border: none;
+    text-transform: uppercase;
+    text-decoration: underline;
+}
+
+.btn-main.active:hover {
+    background-color: #3A5B85;
+    color: white;
+    text-decoration: underline;
 }
