Enable hot-reload.

--- a/modularized/web/templates/index.html
+++ b/modularized/web/templates/index.html
@@ -2,7 +2,7 @@
 {% block title %}Detection Search - LabComply+{% endblock %}
 {% block content %}
 
-    <h2 class="mb-2">Detection Search</h2>
+    <h2 class="mb-2">Overview</h2>
     {% if lab_name and camera_name %}
         <div class="alert alert-info">
             Lab: <strong>{{ lab_name }}</strong><br>
