--- a/modularized/web/templates/second_incompliance.html
+++ b/modularized/web/templates/second_incompliance.html
@@ -72,8 +72,9 @@
         </div>
     </form>
 
-    {% if results %}
+    {% if not results %}
         <h4 class="mb-3">Results:</h4>
+
         <div class="row">
             {% for row in results %}
                 <div class="col-md-4 mb-4">
@@ -101,6 +102,28 @@
                 </div>
             {% endfor %}
         </div>
+
+        {# Pagination UI #}
+        <nav aria-label="Results pagination">
+            <ul class="pagination justify-content-end">
+                <li class="page-item {% if current_page == 1 %} disabled{% endif %}">
+                    <a class="page-link" href="?lab={{ selected_lab }}&page={{ current_page - 1 }}">Previous</a>
+                </li>
+
+                {% for p in range(1, total_pages + 1) %}
+                    <li class="page-item {% if p == current_page %}active{% endif %}">
+                        <a class="page-link" href="?lab={{ selected_lab }}&page={{ p }}">
+                            {{ p }}
+                        </a>
+                    </li>
+                {% endfor %}
+
+                <li class="page-item {% if current_page == total_pages %}disabled{% endif %}">
+                    <a class="page-link" href="?lab={{ selected_lab }}&page={{ current_page + 1 }}">Next</a>
+                </li>
+            </ul>
+        </nav>
+
     {% endif %}
 
     {# Image Modal #}
